# rms-cspyce

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README-developers.md  README.md  get_spice.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_typemap_samples.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  run-tests-with-macos.yml  run-tests.yml
cspyce/: __init__.py  alias_support.py  aliases.py  array_support.py  arrays.py  cspyce0.py  cspyce0_info.py  cspyce1.py  cspyce1_info.py  cspyce2.py  make_cspyce2.py  record_support.py  spice_cell.py  swig_python_callback.py  typemap_samples.py  typemap_test.py
cspyce/cspyce0/: __init__.py  cspyce0.i  cspyce0.py  cspyce_typemaps.i  make_cspyce0_for_osx_10.12_homebrew_python.sh  make_cspyce0_for_ubuntu_python27.sh  make_vectorize.py  numpy.i  setup.py  setup_typemap_samples.py  typemap_samples.i  typemap_test.py
cspyce/swig/: cspyce0.i  cspyce_typemaps.i  make_vectorize.py  typemap_samples.i
development/: N0066_cspyce0_implemented.txt  N0067_all_names.txt  N0067_cspyce0_implemented.txt  implemented.txt  make_skeletal_cspyce0_i.py  not_implemented_headers.c  not_implemented_with_notes.txt
swig/: cspyce0.i  cspyce0_part2.i  cspyce_typemaps.i  make_cspyce0_info.py  make_cspyce2.py  make_vectorize.py  typemap_samples.i  vectorize.i
unittests/: gettestkernels.py  kernelcache.py  test_a_c.py  test_a_c_vector.py  test_build_sanity.py  test_cyl_lat_sph.py  test_d.py  test_d_vector.py  test_das.py  test_e.py  test_errors.py  test_f_j.py  test_k.py  test_k_o.py  test_kernels.py  test_l.py  test_nokernels.py  test_p_r.py  test_s.py  test_set_1.py  test_t_x.py  test_transfer.py  test_transfer_to_emilie.py  unittester.py  unittester_kernels.py
