[build-system]
requires = ["setuptools", "setuptools_scm[toml]", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "cspyce"
dynamic = ["version"]
description = "High-performance Python interface to the NAIF CSPICE library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]
license = {text = "Apache-2.0"}
maintainers = [
  {name = "Robert S. French", email = "rfrench@seti.org"}
]
keywords = ["cspyce", "spice", "cspice", "naif", "jpl", "space", "geometry",
            "ephemeris"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Astronomy",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows"
]

[project.urls]
homepage = "https://github.com/SETI/rms-cspyce"
Repository = "https://github.com/SETI/rms-cspyce"
Source = "https://github.com/SETI/rms-cspyce"
Issues = "https://github.com/SETI/rms-cspyce/issues"

[tool.setuptools]
packages = ["cspyce"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "cspyce/_version.py"
